remove firebase + add analytics

--- a/index.html
+++ b/index.html
@@ -1,72 +1,70 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<link rel='icon' href='css/images/favicon.png' type='image/x-icon'/ >
-	  <script src="https://kit.fontawesome.com/1a1080a3ac.js" crossorigin="anonymous"></script>
-		<title>louis mitchell</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="hello! i'm louis :) just another human with a desperate need for more sleep" />
-		<meta name="keywords" content="louis, louis mitchell, activist, climate live" />
-		<meta name="index"/>
-		<meta name="theme-color" content="#a1decb" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link rel="stylesheet" href="css/style-noscript.css" />
-		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-4QJMC3HD9W"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
 
-		  gtag('config', 'G-4QJMC3HD9W');
-		</script>
-	</head>
-	<body class="loading">
-		<div id="wrapper">
-			<div id="bg"></div>
-			<div id="overlay"></div>
-			<div id="main">
+<head>
+	<link rel='icon' href='css/images/favicon.png' type='image/x-icon' />
+	<script src="https://kit.fontawesome.com/1a1080a3ac.js" crossorigin="anonymous"></script>
+	<title>louis mitchell</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="hello! i'm louis :) just another human with a desperate need for more sleep" />
+	<meta name="keywords" content="louis, louis mitchell, activist, climate live" />
+	<meta name="index" />
+	<meta name="theme-color" content="#a1decb" />
+	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+	<script src="js/skel.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-wide.css" />
+		<link rel="stylesheet" href="css/style-noscript.css" />
+	</noscript>
+	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9C67BHQW2K"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-				<!-- Header -->
-					<header id="header">
-						<h1>louis mitchell</h1>
-						<p>activist &nbsp;&bull;&nbsp; social media & production &nbsp;&bull;&nbsp; sleep is a concept</p>
-						<nav>
-							<ul>
-								<li><a href="https://www.instagram.com/louismitc" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://www.twitter.com/greveclimatique" class="fab fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.tiktok.com/@louismitc" class="fab fa-tiktok"><span class="label">Tiktok</span></a></li>
-								<li><a href="https://www.soundcloud.com/louismitc" class="fab fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-								<li><a href="https://linktr.ee/louismitc" class="fas fa-link"><span class="label">Linktree</span></a></li>
-								<li><a href="mailto:mitchelllouislm@gmail.com" class="far fa-envelope-open"><span class="label">Email</span></a></li>
-							</ul>
-						</nav>
-					</header>
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
 
-				<!-- Footer -->
-					<footer id="footer">
-				    <span> <a href="https://hello.louis.fyi">portfolio.</a></span>
-						<span class="copyright">&copy; louis mitchell 2021</span>
-					</footer>
-					<!-- The core Firebase JS SDK is always required and must be listed first -->
-					<script src="/__/firebase/8.0.1/firebase-app.js"></script>
+		gtag('config', 'G-9C67BHQW2K');
+	</script>
+</head>
 
-					<!-- TODO: Add SDKs for Firebase products that you want to use
-					     https://firebase.google.com/docs/web/setup#available-libraries -->
-					<script src="/__/firebase/8.0.1/firebase-analytics.js"></script>
+<body class="loading">
+	<div id="wrapper">
+		<div id="bg"></div>
+		<div id="overlay"></div>
+		<div id="main">
 
-					<!-- Initialize Firebase -->
-					<script src="/__/firebase/init.js"></script>
-			</div>
+			<!-- Header -->
+			<header id="header">
+				<h1>louis mitchell</h1>
+				<p>activist &nbsp;&bull;&nbsp; social media & production &nbsp;&bull;&nbsp; sleep is a concept</p>
+				<nav>
+					<ul>
+						<li><a href="https://www.instagram.com/louismitc" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.twitter.com/greveclimatique" class="fab fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.tiktok.com/@louismitc" class="fab fa-tiktok"><span class="label">Tiktok</span></a></li>
+						<li><a href="https://www.soundcloud.com/louismitc" class="fab fa-soundcloud"><span class="label">Soundcloud</span></a></li>
+						<li><a href="https://linktr.ee/louismitc" class="fas fa-link"><span class="label">Linktree</span></a></li>
+						<li><a href="mailto:mitchelllouislm@gmail.com" class="far fa-envelope-open"><span class="label">Email</span></a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<span> <a href="https://hello.louis.fyi">portfolio.</a></span>
+				<span class="copyright">&copy; louis mitchell 2021</span>
+			</footer>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
