--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9C67BHQW2K"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -45,14 +44,13 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>louis mitchell</h1>
-				<p>activist &nbsp;&bull;&nbsp; social media & production &nbsp;&bull;&nbsp; sleep is a concept</p>
+				<p>climate activist &nbsp;&bull;&nbsp; video producer &nbsp;&bull;&nbsp; sleep is a concept</p>
 				<nav>
 					<ul>
 						<li><a href="https://www.instagram.com/louismitc" class="fab fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.twitter.com/greveclimatique" class="fab fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.tiktok.com/@louismitc" class="fab fa-tiktok"><span class="label">Tiktok</span></a></li>
 						<li><a href="https://www.soundcloud.com/louismitc" class="fab fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-						<li><a href="https://linktr.ee/louismitc" class="fas fa-link"><span class="label">Linktree</span></a></li>
 						<li><a href="mailto:mitchelllouislm@gmail.com" class="far fa-envelope-open"><span class="label">Email</span></a></li>
 					</ul>
 				</nav>
@@ -60,7 +58,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<span> <a href="https://hello.louis.fyi">portfolio.</a></span>
+				<!-- <span> <a href="https://hello.louis.fyi">portfolio.</a></span> -->
 				<span class="copyright">&copy; louis mitchell 2021</span>
 			</footer>
 		</div>
