removed old code and added a buggy loader

--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
 	</script>
 </head>
 
-<body class="loading">
+<body>
+	<div class="loading">
+		<div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	      <div class="obj"></div>
+	</div>
+
 	<div id="wrapper">
 		<div id="bg"></div>
 		<div id="overlay"></div>
@@ -56,7 +67,6 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<!-- <span> <a href="https://hello.louis.fyi">portfolio.</a></span> -->
 				<span class="copyright">&copy; louis mitchell 2021</span>
 			</footer>
 		</div>
