update index w/ portfolio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<!-- <span> <a href="https://hello.louis.fyi">portfolio.</a></span> -->
+			  <span> <a href="https://portfolio.louis.fyi">portfolio.</a></span>
 				<span class="copyright">&copy; louis mitchell 2021</span>
 			</footer>
 		</div>
